# accrule

./: .gitignore  README.md
backend/: dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/routers/: accounts.py  auth.py  categories.py  transactions.py  users.py
